--- a/lovely.toml
+++ b/lovely.toml
@@ -15,3 +15,53 @@ for i=1, #G.jokers.cards do
     eval_card(G.jokers.cards[i], {pl_cash_out = true})
 end
 '''
+
+[[patches]]
+[patches.pattern]
+target = "blind.lua"
+pattern = '''if blind and blind.name and blind.name ~= '' then'''
+position = "after"
+payload = '''
+for i=1, #G.jokers.cards do
+    if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' then
+        if G.jokers.cards[i].ability.extra.mimic then
+            G.jokers:remove_card(G.jokers.cards[i].ability.extra.mimic)
+            G.jokers.cards[i].ability.extra.mimic:remove()
+            G.jokers.cards[i].ability.extra.mimic = nil
+        end
+        G.jokers.cards[i].ability.extra.mimic = SMODS.create_card({set = 'Joker', area = G.jokers, no_edition = true})
+        G.jokers.cards[i].ability.extra.mimic.states.visible = nil
+        G.jokers.cards[i].ability.extra.mimicname = G.jokers.cards[i].ability.extra.mimic.ability.name
+    end
+end'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "card.lua"
+pattern = '''self.removed = true'''
+position = "after"
+payload = '''
+if self.ability.name == 'j_Plantain_chaos' and self.ability.extra.mimic then
+    G.jokers:remove_card(self.ability.extra.mimic)
+    self.ability.extra.mimic:remove()
+    self.ability.extra.mimic = nil
+end'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "card.lua"
+pattern = '''elseif self.ability.name == 'Perkeo' then loc_vars = {self.ability.extra}
+        end'''
+position = "after"
+payload = '''
+if G.jokers and G.jokers.cards then
+    for i=1, #G.jokers.cards do
+        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and self.ability.name == G.jokers.cards[i].ability.extra.mimicname then
+            G.jokers.cards[i].ability.extra.info = loc_vars
+        end
+    end
+end
+'''
+match_indent = true
