--- a/lovely.toml
+++ b/lovely.toml
@@ -58,7 +58,7 @@ position = "after"
 payload = '''
 if G.jokers and G.jokers.cards then
     for i=1, #G.jokers.cards do
-        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and self.ability.name == G.jokers.cards[i].ability.extra.mimicname then
+        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and self.ability.name == G.jokers.cards[i].ability.extra.mimicname and G.jokers.cards[i].ability.extra.mimic.config.center.mod == nil then
             G.jokers.cards[i].ability.extra.info = loc_vars
         end
     end
