--- a/lovely.toml
+++ b/lovely.toml
@@ -72,3 +72,20 @@ if G.jokers and G.jokers.cards then
 end
 '''
 match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "card.lua"
+pattern = '''if G.jokers.cards[i] == self then other_joker = G.jokers.cards[i+1] end
+            end'''
+position = "after"
+payload = '''
+if other_joker == nil then
+    for i = 1, #G.jokers.cards do
+        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and G.jokers.cards[i].ability.extra.mimic and G.jokers.cards[i].ability.extra.mimic.ability.name == self.ability.name then 
+            other_joker = G.jokers.cards[i+1]
+        end
+    end
+end
+'''
+match_indent = true
