--- a/lovely.toml
+++ b/lovely.toml
@@ -82,7 +82,7 @@ position = "after"
 payload = '''
 if other_joker == nil then
     for i = 1, #G.jokers.cards do
-        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and G.jokers.cards[i].ability.extra.mimic and G.jokers.cards[i].ability.extra.mimic.ability.name == self.ability.name then 
+        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and G.jokers.cards[i].ability.extra.mimic and G.jokers.cards[i].ability.extra.mimic == self then 
             other_joker = G.jokers.cards[i+1]
         end
     end
