--- a/lovely.toml
+++ b/lovely.toml
@@ -18,38 +18,11 @@ end
 
 [[patches]]
 [patches.pattern]
-target = "blind.lua"
-pattern = '''if blind and blind.name and blind.name ~= '' then'''
-position = "after"
-payload = '''
-for i=1, #G.jokers.cards do
-    if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' then
-        if G.jokers.cards[i].ability.extra.mimic then
-            G.jokers:remove_card(G.jokers.cards[i].ability.extra.mimic)
-            G.jokers.cards[i].ability.extra.mimic:remove()
-            G.jokers.cards[i].ability.extra.mimic = nil
-        end
-        local options = {}
-        for k, v in pairs(G.P_CENTERS) do
-            if v.unlocked and v.set == 'Joker' then
-                table.insert(options, v)
-            end
-        end
-        local chosen_key = pseudorandom_element(options, pseudoseed('chaos'..G.GAME.round_resets.ante))
-        G.jokers.cards[i].ability.extra.mimic = SMODS.create_card({set = 'Joker', area = G.jokers, no_edition = true, key = chosen_key.key})
-        G.jokers.cards[i].ability.extra.mimic.states.visible = nil
-        G.jokers.cards[i].ability.extra.mimicname = localize{type = 'name_text', set = G.jokers.cards[i].ability.extra.mimic.config.center.set, key = G.jokers.cards[i].ability.extra.mimic.config.center.key}
-    end
-end'''
-match_indent = true
-
-[[patches]]
-[patches.pattern]
 target = "card.lua"
 pattern = '''self.removed = true'''
 position = "after"
 payload = '''
-if self.ability.name == 'j_Plantain_chaos' and self.ability.extra.mimic then
+if self.ability.name == 'j_Plantain_inkblot_joker' and self.ability.extra.mimic then
     G.jokers:remove_card(self.ability.extra.mimic)
     self.ability.extra.mimic:remove()
     self.ability.extra.mimic = nil
@@ -65,8 +38,15 @@ position = "after"
 payload = '''
 if G.jokers and G.jokers.cards then
     for i=1, #G.jokers.cards do
-        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and G.jokers.cards[i].ability.extra.mimic and self.ability.name == G.jokers.cards[i].ability.extra.mimic.ability.name and G.jokers.cards[i].ability.extra.mimic.config.center.mod == nil then
+        if G.jokers.cards[i].ability.name == 'j_Plantain_inkblot_joker' and G.jokers.cards[i].ability.extra.mimic and self.ability.name == G.jokers.cards[i].ability.extra.mimic.ability.name and G.jokers.cards[i].ability.extra.mimic.config.center.mod == nil then
             G.jokers.cards[i].ability.extra.info = loc_vars
+        end
+    end
+    if G.shop_jokers and G.shop_jokers.cards then
+        for k, v in ipairs(G.shop_jokers.cards) do
+            if v.ability.name == 'j_Plantain_inkblot_joker' and v.ability.extra.mimic and self.ability.name == v.ability.extra.mimic.ability.name and v.ability.extra.mimic.config.center.mod == nil then
+                v.ability.extra.info = loc_vars
+            end
         end
     end
 end
@@ -82,7 +62,7 @@ position = "after"
 payload = '''
 if other_joker == nil then
     for i = 1, #G.jokers.cards do
-        if G.jokers.cards[i].ability.name == 'j_Plantain_chaos' and G.jokers.cards[i].ability.extra.mimic and G.jokers.cards[i].ability.extra.mimic == self then 
+        if G.jokers.cards[i].ability.name == 'j_Plantain_inkblot_joker' and G.jokers.cards[i].ability.extra.mimic and G.jokers.cards[i].ability.extra.mimic == self then 
             other_joker = G.jokers.cards[i+1]
         end
     end
@@ -97,7 +77,7 @@ pattern = '''local jokers = {}'''
 position = "after"
 payload = '''
 for k, v in pairs(G.jokers.cards) do
-    if v and type(v) == 'table' and v.ability.name == 'j_Plantain_chaos' and v.ability.extra.mimic and v.ability.extra.mimic.ability.name == name then
+    if v and type(v) == 'table' and v.ability.name == 'j_Plantain_inkblot_joker' and v.ability.extra.mimic and v.ability.extra.mimic.ability.name == name then
         table.insert(jokers, v.ability.extra.mimic)
     end
 end
@@ -110,7 +90,7 @@ target = "functions/state_events.lua"
 pattern = '''local ret = G.jokers.cards[i]:calculate_dollar_bonus()'''
 position = "after"
 payload = '''
-if _card.ability.name == 'j_Plantain_chaos' and _card.ability.extra.mimic then
+if _card.ability.name == 'j_Plantain_inkblot_joker' and _card.ability.extra.mimic then
     ret = _card.ability.extra.mimic:calculate_dollar_bonus()
 end
 '''
