better flip and fix for inkbloat jokers not saving properly

--- a/lovely.toml
+++ b/lovely.toml
@@ -23,16 +23,18 @@ pattern = '''if self.ability.set == "Joker" and not self.debuff then'''
 position = "after"
 payload = '''
 if self.ability.name == 'j_Plantain_inkblot_joker' and self.ability.extra.mimic then
+    local old = self.ability.extra.mimic
+    G.GAME.plantain_inkbloats = {}
     G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.15, func = function()
         self:flip()
         play_sound('tarot1')
+        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 1, func = function()
+            self:set_ability(old)
+            self:flip()
+            table.insert(G.GAME.plantain_inkbloats, old)
+            ;return true end }))
         ;return true end }))
-    G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.3, func = function()
-        local old = self.config.center
-        self:set_ability(self.ability.extra.mimic)
-        self:flip()
-        self.mimic = old
-        ;return true end }))
+    
 end
 '''
 match_indent = true
@@ -43,16 +45,20 @@ target = "card.lua"
 pattern = '''if context.individual then'''
 position = "before"
 payload = '''
-if self.mimic and not context.individual and not context.repetition then
-    G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.15, func = function()
-        self:flip()
-        play_sound('tarot1')
-        ;return true end }))
-    G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.3, func = function()
-        self:set_ability(self.mimic)
-        self:flip()
-        ;return true end }))
-    
+if not context.individual and not context.repetition and G.GAME.plantain_inkbloats then
+    for k, v in pairs(G.GAME.plantain_inkbloats) do
+        if v.key == self.config.center.key then
+            table.remove(G.GAME.plantain_inkbloats, k)
+            G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.15, func = function()
+                self:flip()
+                play_sound('tarot1')
+                G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.3, func = function()
+                    self:set_ability(G.P_CENTERS['j_Plantain_inkblot_joker'])
+                    self:flip()
+                    ;return true end }))
+                ;return true end }))
+        end
+    end
 end
 '''
 match_indent = true
