--- a/lovely.toml
+++ b/lovely.toml
@@ -53,6 +53,51 @@ if context.setting_blind and not self.getting_sliced and context.blind == G.GAME
         self.ability.perma_bonus = self.ability.mimic and self.ability.mimic.perma_bonus or 0
         self.ability.extra = copy_table(self.ability.mimic.config.extra) or nil
         self.ability.enhancement_gate = self.ability.mimic.enhancement_gate or nil
+        self.ability.blueprint_compat = self.ability.mimic.blueprint_compat
+        if self.ability.h_size ~= 0 then
+          G.hand:change_size(self.ability.h_size)
+        end
+        if self.ability.d_size > 0 then
+            G.GAME.round_resets.discards = G.GAME.round_resets.discards + self.ability.d_size
+            ease_discard(self.ability.d_size)
+        end
+        if self.ability.name == 'Credit Card' then
+            G.GAME.bankrupt_at = G.GAME.bankrupt_at - self.ability.extra
+        end
+        if self.ability.name == 'Chicot' and G.GAME.blind and G.GAME.blind.boss and not G.GAME.blind.disabled then
+            G.GAME.blind:disable()
+            play_sound('timpani')
+            card_eval_status_text(self, 'extra', nil, nil, nil, {message = localize('ph_boss_disabled')})
+        end
+        if self.ability.name == 'Chaos the Clown' then
+            G.GAME.current_round.free_rerolls = G.GAME.current_round.free_rerolls + 1
+            calculate_reroll_cost(true)
+        end
+        if self.ability.name == 'Turtle Bean' then
+            G.hand:change_size(self.ability.extra.h_size)
+        end
+        if self.ability.name == 'Oops! All 6s' then
+            for k, v in pairs(G.GAME.probabilities) do 
+                G.GAME.probabilities[k] = v*2
+            end
+        end
+        if self.ability.name == 'To the Moon' then
+            G.GAME.interest_amount = G.GAME.interest_amount + self.ability.extra
+        end
+        if self.ability.name == 'Astronomer' then 
+            G.E_MANAGER:add_event(Event({func = function()
+                for k, v in pairs(G.I.CARD) do
+                    if v.set_cost then v:set_cost() end
+                end
+                return true end }))
+        end
+        if self.ability.name == 'Troubadour' then
+            G.hand:change_size(self.ability.extra.h_size)
+            G.GAME.round_resets.hands = G.GAME.round_resets.hands + self.ability.extra.h_plays
+        end
+        if self.ability.name == 'Stuntman' then
+            G.hand:change_size(-self.ability.extra.h_size)
+        end
     end
 end
 '''
