remove shortcut from the pool since it doesnt work (why)

--- a/lovely.toml
+++ b/lovely.toml
@@ -26,7 +26,7 @@ if context.setting_blind and not self.getting_sliced and context.blind == G.GAME
     if G.jokers then
         local options = {}
         for k, v in pairs(G.P_CENTERS) do
-          if v.unlocked and v.set == 'Joker' and v.name ~= 'j_Plantain_inkblot_joker' then
+          if v.unlocked and v.set == 'Joker' and v.name ~= 'j_Plantain_inkblot_joker' and v.name ~= 'Shortcut' then
             table.insert(options, v)
           end
         end
